// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the correct number of children 1`] = `
<table
  class="AssertionTable"
>
  <tbody>
    <tr>
      <th>
        Author
      </th>
      <th>
        Verdict
      </th>
      <th>
        Metadata
      </th>
      <th>
        Bid
      </th>
    </tr>
    <tr
      class="AssertionRow"
    >
      <td>
        asdf
      </td>
      <td
        class="Assertion-Benign"
      >
        Benign
      </td>
      <td>
        Nothing
      </td>
      <td>
        5
      </td>
    </tr>
    <tr
      class="AssertionRow"
    >
      <td>
        demo
      </td>
      <td
        class="Assertion-Benign"
      >
        Benign
      </td>
      <td>
        
      </td>
      <td>
        5
      </td>
    </tr>
    <tr
      class="AssertionRow"
    >
      <td>
        fdsa
      </td>
      <td
        class="Assertion-Malignant"
      >
        Malignant
      </td>
      <td>
        VIRUS
      </td>
      <td>
        1000
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders without crashing 1`] = `
<table
  class="AssertionTable"
>
  <tbody>
    <tr>
      <th>
        Author
      </th>
      <th>
        Verdict
      </th>
      <th>
        Metadata
      </th>
      <th>
        Bid
      </th>
    </tr>
  </tbody>
</table>
`;
